--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -33,12 +34,13 @@
             <p2>I love animals and my favorites are horse, cat and rabbit</p2>
             <p3>I love to travel and discover new places</p3>
             <p4>I am fluent in Arabic, of course, which is the mother tongue , and good in English, and I know a little in Turkish</p4>
+          <p>sportName = [running, swimming, walk, basketball, Climbing, Boxing, football, Tennis, Cycling, Skydiving]</p>
           </section>
     </main>
     <footer>
         copy right;2021 Ghofran
     </footer>
-      <script src="./app.js"></script> 
+      <script src="./js/app.js"></script> 
    
 </body>
 </html>
